--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
