--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "run": "bun run dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.3.3",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -31,6 +36,7 @@
     "clsx": "^2.1.0",
     "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.4",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +45,7 @@
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
